--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
           <img id="logo" src="../Images/weblogo.jpg" />
         </div>
         <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="destinations.html">Destinations</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="photodump.html">Photo Dump</a></li>
+          <li><a href="../HTML/home.html">Home</a></li>
+          <li><a href="../HTML/about.html">About</a></li>
+          <li><a href="../HTML/blog.html">Blog</a></li>
+          <li><a href="../HTML/destinations.html">Destinations</a></li>
+          <li><a href="../HTML/reviews.html">Reviews</a></li>
+          <li><a href="../HTML/photodump.html">Photo Dump</a></li>
         </ul>
       </nav>
     </header>
