--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
         also like to watch basketball and baseball. I love the Detroit Pistons
         and Detroit Tigers.
       </p>
-      <img id="sports1-pic" src="../Images/sports1.JPG" />
+      <img id="sports1-pic" src="../Images/sports1.jpg" />
       <img id="sports2-pic" src="../Images/sports2.JPG" />
     </div>
 
