--- a/destinations.html
+++ b/destinations.html
@@ -33,7 +33,7 @@
     </div>
     <div id="travel">
       <img id="travel1-pic" src="../Images/travel1.JPG" />
-      <img id="destin2-pic" src="../Images/destin2.JPG" />
+      <img id="destin2-pic" src="../Images/destin2.jpg" />
     </div>
     <h2 id="home-head">Los Angeles, California</h2>
     <div id="westlake">
@@ -60,9 +60,9 @@
 
     <h2 id="home-head">Zion National Park, Utah</h2>
     <div id="zion">
-      <img id="zion1-pic" src="../Images/zion1.JPG" />
-      <img id="zion2-pic" src="../Images/zion2.JPG" />
-      <img id="zion4-pic" src="../Images/zion4.JPG" />
+      <img id="zion1-pic" src="../Images/zion1.jpg" />
+      <img id="zion2-pic" src="../Images/zion2.jpg" />
+      <img id="zion4-pic" src="../Images/zion4.jpg" />
     </div>
     <div id="zion-desc">
       <p>
