--- a/reviews.html
+++ b/reviews.html
@@ -36,9 +36,9 @@
     </div>
     <h2 id="home-head">Piper's Pub Gladwin, Michigan</h2>
     <div id="pipers">
-      <img id="pipers1-pic" src="../Images/pipers1.JPG" />
-      <img id="pipers2-pic" src="../Images/pipers2.JPG" />
-      <img id="pipers3-pic" src="../Images/pipers3.JPG" />
+      <img id="pipers1-pic" src="../Images/pipers1.jpg" />
+      <img id="pipers2-pic" src="../Images/pipers2.jpg" />
+      <img id="pipers3-pic" src="../Images/pipers3.jpg" />
     </div>
     <div id="pipers-desc">
       <p>
@@ -56,8 +56,8 @@
 
     <h2 id="home-head">Eggs-N-Things Thousand Oaks, California</h2>
     <div id="zion">
-      <img id="eggs1-pic" src="../Images/eggs1.JPG" />
-      <img id="eggs2-pic" src="../Images/eggs2.JPG" />
+      <img id="eggs1-pic" src="../Images/eggs1.jpg" />
+      <img id="eggs2-pic" src="../Images/eggs2.jpg" />
     </div>
     <div id="zion-desc">
       <p>
